# isr-uc-ros-pkg

./: ProjectHome.md
stacks/can_communication/trunk/: stack.xml
stacks/contextrob/trunk/: stack.xml
stacks/fsr_base_station/trunk/: stack.xml
stacks/gps_rtk/trunk/: stack.xml
stacks/gps_rtk/trunk/rtk_ros/: CMakeLists.txt  manifest.xml
stacks/gps_rtk/trunk/rtk_ros/src/: rtk_ppp_node.cpp  rtk_robot_node.cpp  save_ecef_file.cpp  save_utm_file.cpp
stacks/lse_battery_drivers/: stack.xml
stacks/lse_climber_robots/pole_structure_mapper/: mainpage.dox
stacks/lse_climber_robots/trunk/: stack.xml
stacks/lse_experiments/fctuc_open_day/: move_base.launch
stacks/lse_experiments/trunk/: stack.xml
stacks/lse_imu_drivers/trunk/: stack.xml
stacks/lse_messages/trunk/: stack.xml
stacks/lse_miniq_robot/trunk/: stack.xml
stacks/lse_ressources/isr_maps/: manifest.xml
stacks/lse_roomba_toolbox/lse_roomba_2dnav/: move_base_isr_floor1.launch
stacks/lse_roomba_toolbox/lse_roomba_stage/: roomba_isr_floor0.world
stacks/lse_sensor_network/sensornet/: CMakeLists.txt
stacks/mrl_robots/: CMakeLists.txt  manifest.xml  stack.xml
stacks/mrl_robots/trunk/: stack.xml
stacks/mrl_robots/upload_arduino/: ReadMe.txt
stacks/odor_search/pp_explorer/: manifest.xml
stacks/robchair_robot/trunk/: stack.xml
stacks/scout_robot/trunk/: stack.xml
stacks/simple_navigation/trunk/: stack.xml
stacks/simulator_plumesim/plumesim/: manifest.xml
stacks/sonar_imagenex/trunk/: CMakeLists.txt  manifest.xml
stacks/squirtle_robot/trunk/: stack.xml
stacks/traxbot_robot/: mainpage.dox
trunk/: mainpage.dox
trunk/2dnav_roomba/: 2dnav_roomba.vcg  mainpage.dox  manifest.xml  move_base.launch  roomba_configuration.launch
trunk/2dnav_roomba/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
trunk/irobot/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/irobot/msg/: Battery.msg
trunk/irobot/src/: roomba500.cpp
trunk/logs/fluent_logs/: cont05-004  cont05-011  cont05-015  cont05-022  cont05-029  cont05-030  cont05-032  cont05-048  cont05-053
trunk/plumesim/: CMakeLists.txt
trunk/plumesim/msg/: NoseSniff.msg
trunk/plumesim/settings/: fluent_settings.yaml  pslog_settings.yaml
trunk/plumesim/src/: PlumeSim.cpp
trunk/plumesim_test/: CMakeLists.txt  manifest.xml
trunk/plumesim_test/msg/: NoseSniff.msg
trunk/plumesim_test/settings/: fluent_settings.yaml
trunk/plumesim_test/src/: PlumeSim.cpp
trunk/plumesim_test/srv/: ReadPlumeSim.srv
trunk/roomba_info_test/: CMakeLists.txt  manifest.xml
trunk/roomba_info_test/msg/: BatState.msg
trunk/roomba_info_test/src/: info_frame.cpp  roomba.cpp  roomba_app.cpp
trunk/roomba_setup_tf/: mainpage.dox  manifest.xml
trunk/roomba_setup_tf/src/: tf_broadcaster.cpp
trunk/settings/: gaussian_settings.yaml  meadering_settings.yaml
trunk/simple_goals/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/simple_goals/src/: simple_goals.cpp
trunk/src/utils/: PSMeadering.cpp
trunk/unstable/lse_anemometer_drivers/: stack.xml
trunk/unstable/lse_arduino/: stack.xml
trunk/unstable/lse_communication/: stack.xml
trunk/unstable/lse_erratic_toolbox/: stack.xml
trunk/unstable/lse_experiments/: stack.xml
trunk/unstable/lse_imu_drivers/: stack.xml
trunk/unstable/lse_messages/: stack.xml
trunk/unstable/lse_ressources/: stack.xml
trunk/unstable/lse_roomba_toolbox/: stack.xml
trunk/unstable/lse_sensor_network/: stack.xml
trunk/unstable/odor_search/: stack.xml
trunk/unstable/patrol/: stack.xml
trunk/wifi_comm/: CMakeLists.txt  mainpage.dox  manifest.xml
unstable/lse_arduino/ardusim/: CMakeLists.txt  manifest.xml
unstable/lse_ressources/: stack.xml
unstable/lse_roomba_toolbox/: stack.xml
unstable/lse_sensor_network/: stack.xml
unstable/serial_communication/: stack.xml
(+721 files in other folders)
